@@ -1105,7 +1105,7 @@
   if (lastEL == ELIncluded) NSLog(@"+++ELIncluded");
   if (lastEL == ELError) NSLog(@"+++ELError");
   if (lastEL == ELNone) NSLog(@"+++ELNone");*/
-//  NSLog(@"components: %lu, %@", (unsigned long)[components count], components);
+  //NSLog(@"components: %lu, %@", (unsigned long)[components count], components);
   if ([errorArray count] > 0)
     {
       lastFile = [[errorArray lastObject] objectForKey:@"File"];
@@ -1156,6 +1156,10 @@
 	  type = [components objectAtIndex:typeIndex];
 	  warningsCount++;
 	}
+      else if ((typeIndex = [components indexOfObject:@" note"]) != NSNotFound) // generated by clang
+	{
+	  type = [components objectAtIndex:typeIndex];
+	}
       else if ((typeIndex = [components indexOfObject:@" error"]) != NSNotFound)
 	{
 	  type = [components objectAtIndex:typeIndex];
@@ -1167,7 +1171,7 @@
 	  errorsCount++;
 	}
 
-      //      NSLog(@"typeIndex: %u", (unsigned int)typeIndex);
+      //     NSLog(@"typeIndex: %u", (unsigned int)typeIndex);
       // position
       if (typeIndex == 2) // :line:
 	{
